--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mysql-generated-models",
+  "name": "simple-model-manager",
   "version": "0.1.0",
   "description": "A SQL first orm that emphesises simplicity and testing.",
   "main": "index.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/cwiki/mysql-generated-models.git"
+    "url": "https://github.com/cwiki/simple-model-manager.git"
   },
   "keywords": [
     "mysql",
@@ -18,9 +18,9 @@
   "author": "Cody Wikman <cwiki.tucson@gmail.com> (http://blog.wikwebdev.com)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/cwiki/mysql-generated-models/issues"
+    "url": "https://github.com/cwiki/simple-model-manager/issues"
   },
-  "homepage": "https://github.com/cwiki/mysql-generated-models#readme",
+  "homepage": "https://github.com/cwiki/simple-model-manager#readme",
   "dependencies": {
     "faker": "^4.1.0",
     "murmurhash": "0.0.2",
